welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: ':' expected but identifier found.
		def faireV(Color c){
                                 ^MethodsPicture:22: error: identifier expected but '}' found.
}
^