welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
		def faireV(Color c){
		setCouleurBrosse(Color c);
		avance();
		baisseBrosse();
		leveBrosse();
		avance();
		gauche();
		baisseBrosse();
		leveBrosse();
		recule();
		droite();
		avance();
		baisseBrosse();
		leveBrosse();
		avance();
		gauche();
	}

	faireV(Color.YELLOW);
}
